<resources>
    <string name="app_name">ControleProjetoDev</string>
    <string name="app_description">Project Control to Developers</string>
    <string name="uso_pessoal">Pessoal</string>
    <string name="uso_corporativo">Corporativo </string>
    <string name="uso_educacional">Educacional</string>
    <string name="web">Web</string>
    <string name="mobile">Mobile</string>
    <string name="desktop">Desktop</string>
    <string name="database">Database</string>
    <string name="game">Game</string>
    <string name="b_i">B.I</string>
    <string name="crm">CRM</string>
    <string name="erp">ERP</string>
    <string name="rpa">RPA</string>
    <string name="devOps">DevOps</string>
    <string name="salvar">Save</string>
    <string name="excluir">Delete</string>
    <string name="usar_dados">Use Data</string>
    <string name="azul">Blue</string>
    <string name="vermelho">Red</string>
    <string name="sub_menu">Sub Menu</string>
    <string name="opcao_1">Option 1</string>
    <string name="opcao_2">Option 2</string>
    <string name="foi_clicado">Was Clicked</string>
    <string name="editar">Edit</string>
    <string name="sobre">About this App</string>
    <string name="adicionar">Add</string>
    <string name="tema">Chanhe Theme</string>
    <string name="novo_projeto">Register Project</string>
    <string name="editar_projeto">Edit Project</string>
    <string name="Apresentação">Hey Dev, welcome to you project control.</string>
    <string name="Sair">Sair</string>
    <string name="Prosseguir">Prosseguir</string>
    <string name="Cadastrar">Register a New Project</string>
    <string name="NomeProjeto">Project Name</string>
    <string name="HintTxtProjeto">Enter the Project name</string>
    <string name="TipoProjeto">Project Type</string>
    <string name="IsFinalizado">Project Finished?</string>
    <string name="FinalidadeProjeto">Escolha a finalidade do projeto</string>
    <string name="Salvar">Save</string>
    <string name="Limpar">Clear</string>
    <string name="TxtConfereProjeto">Check Projects</string>
    <string name="DevelopBy">Develop by: Murilo Zermiani Costa In: 01/07/2024</string>
    <string name="MeusProjetos">My Projects</string>
    <string name="txtDetalheApp">The purpose of this Application is to manage projects created by a user, who is a software developer. In Dev\'s routine, especially freelancers for example, it is normal to come across numerous technological projects being done simultaneously. As a result, it is often difficult amid this tangle of project folders to identify or remember which one has been completed or what status this application is in. This manager comes to help resolve precisely this issue.</string>
    <string name="PerguntaAcao">" What do you want to do in this app at the moment"</string>
    <string name="InfoApp">" Application Information"</string>
    <string name="nome">nome</string>
    <string name="tipo">tipo</string>
    <string name="txtFinalidade">Finalidade</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="aviso">Warning</string>
    <string name="ok">Ok</string>
    <string name="confirmacao">confirmacao</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
    <string name="erro_ao_tentar_alterar">Error trying to change!</string>
    <string name="erro_ao_tentar_apagar">Error trying to delete!</string>
    <string name="tem_certeza_de_que_deseja_exluir_este_projeto">Tem certeza de que deseja exluir este projeto?</string>
    <string name="finalidade_n_o_pode_ser_vazia">Finalidade não pode ser vazia!</string>

</resources>